--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-       <section id="message">
+        <section id="message">
 
         </section>
         <section class="inputs">
@@ -31,14 +31,16 @@
     <option value="Mountain">Mountain</option>
     <option value="Pacific">Pacific</option>
 </select>
-
+ <div id="spacer"></div>
    <label for="termsAndConditions">
                 <input type="checkbox" name="termsAndConditions" id="termsAndConditions"/>
                     Accept Terms and Conditions</label>
   
   
 </form>
+
          <section class="control-panel">
+          
             <button id="submitButton">Submit</button>
             <button id="resetButton">Reset</button>
             <!--<input type="button" value="Update Values" id="btnUpdate" />-->
@@ -48,7 +50,6 @@
     </body>
 
 </html> 
-
 
 
 
